# eudr-dmi-gil

./: .arch-recommendations  .gitignore  ADOPTION_LOG.md  README.md  demo_mcp_servers.py  pyproject.toml  requirements-dev.txt  requirements-methods.txt  requirements.txt
aoi_json_examples/: README.md  estonia_testland1_loss_demo.geojson
data/: README.md
data_db/: README.md  dependency_sources.csv
docs/: INSPECTION_INDEX.md  PRIVACY_AND_SCOPE.md  WORKSPACE.md
scripts/: bootstrap_data_db.py  bootstrap_data_db.sh  check_method_deps.py  detect_example_bundle_artifact_changes.py  e2e_example_to_dt.sh  eudr-dmi-gil.code-workspace  export_aoi_reports_staging.py  export_dependency_sources.py  generate_report_v1.py  publish_aoi_reports_to_dt.sh  publish_demo_reports_to_digital_twin.sh  publish_dt_aoi_bundle_set.sh  publish_latest_aoi_reports_to_dt.sh  publish_reports_to_digital_twin.sh  render_dte_setup_patch.py  run_example_report.sh  run_example_report_clean.sh  suggest_dependency_updates.py  test_run_estonia_testland1.sh  verify_dt_links.sh
tests/: conftest.py  test_bootstrap_data_db.py  test_detect_example_bundle_artifact_changes.py  test_estonia_testland1_smoke.py  test_forest_loss_post_2020.py  test_hansen_manifest_ordering.py  test_hansen_tiles.py  test_maaamet_validation.py  test_methods_maa_amet_crosscheck.py  test_policy_refs.py  test_report_v1_generation.py  test_reports_bundle_determinism.py  test_reports_cli.py  test_reports_schema_validation.py  test_suggest_dependency_updates_history.py
tools/: publish_latest_aoi_reports_to_dt.py
(+49 files in other folders)
